[project]
name = "bucket-api-py"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "openai>=1.35.0",
  "httpx>=0.27.0",
  "gunicorn>=22.0.0",
  "redis>=5.0.4",
  "requests (>=2.32.4,<3.0.0)"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0"
]

[project.scripts]
app-serve = "app.cli:run"
app-test = "app.cli:test"

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

# Poetry metadata to enable `poetry install` and `poetry run`
[tool.poetry]
name = "tokenguard"
version = "0.1.0"
description = "FastAPI rate limiter for LLM APIs with hierarchical token buckets"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.111.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
pydantic = ">=2.7.0"
python-dotenv = ">=1.0.1"
openai = ">=1.35.0"
httpx = ">=0.27.0"
gunicorn = ">=22.0.0"
redis = ">=5.0.4"

[tool.poetry.group.test.dependencies]
pytest = ">=8.2.0"
pytest-cov = ">=5.0.0"
httpx = ">=0.27.0"

[tool.poetry.scripts]
app-serve = "app.cli:run"
app-test = "app.cli:test"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
